test(BeanFactoryTest.java): controller, service, repository 애노테이션 설정된 클래스 찾기